--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "./genderscore",
         "./medals-club",
         "./techniaue",
-        "./weight"
+        "./weight",
+        "./distrubution-part-club"
     ]
 }
